fix spacing

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -239,7 +239,7 @@
   }
 }
 .rootMenu {
-  min-width: 200px;
+  min-width: 227px;
   top: 45px !important;
 }
 .menuAction {
@@ -380,10 +380,10 @@
 }
 
 .itemsOfToggle{
- 
   font-size: 16px;
- 
-  font-weight: 500
+  font-weight: 500;
+  margin-bottom: 5px;
+  margin-left: 6px;
 }
 .itemsOfToggle:not(:first-child)> a {
   color: rgba(28, 28, 28, 0.9);
@@ -394,12 +394,13 @@
   border: none;
   border-left: 4px solid rgba(166, 204, 23, 1);
   margin-left: 15px;
-  padding: 0px;
-  margin-bottom: 13px;
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
-  padding: 7px 0px 7px 15px ;
-  
+  padding-left:  15px ;
+  margin-top: 15px;
+  height: 36px;
+  margin-left: 24px;
 }
 .itemsOfToggle:first-child >a{
   color: rgba(28, 28, 28, 0.9);
@@ -408,8 +409,8 @@
 }
 .buttonOfToggle{
    display: block;
-   margin-left: 15px;
-    margin-bottom: 30px;
+   margin-left: 24px;
+    margin-bottom: 32px;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -432,6 +433,7 @@
 .hrofToggle{
   margin: 0px 24px 17px 24px;
   border-bottom: 1px solid rgba(28, 28, 28, 0.2);
+  margin-top: -10px;
 }
 .itKey{
   display: none;
